update properties